added models and prereqs

--- a/docker/neural-style-tensorflow-docker/Dockerfile
+++ b/docker/neural-style-tensorflow-docker/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER "Sebastian Betzin, https://github.com/sbetzin"
 
 # prepare basic os and python libs
 RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo
-RUN pip install --upgrade pip && pip install opencv-python-headless wheel azure-storage-queue azure-storage-blob blobxfer piexif
+RUN pip install --upgrade pip && pip install opencv-python-headless wheel azure-storage-queue azure-storage-blob blobxfer piexif moviepy
 
 # download loss network
 WORKDIR /app
@@ -23,6 +23,13 @@ RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/mod
 # adding the fast neural style tensorflow implementation
 WORKDIR /app
 RUN git clone https://github.com/lengstrom/fast-style-transfer.git
+
+# This seems to be a different model than we are using above
+WORKDIR /app/fast-style-transfer
+RUN mkdir data && wget --progress=bar:force http://www.vlfeat.org/matconvnet/models/beta16/imagenet-vgg-verydeep-19.mat
+
+# adding ffmpeg for fast style video transfer
+RUN imageio_download_bin ffmpeg
 
 # Copy the neural style files (modified) -> this is why we are not cloning the orignal github files
 COPY ["/src/*.py" ,"/app/"]
