added orig color functions

--- a/docker/neural-style-tensorflow-docker/src/.vscode/launch.json
+++ b/docker/neural-style-tensorflow-docker/src/.vscode/launch.json
@@ -4,7 +4,7 @@
     // Weitere Informationen finden Sie unter https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
+        
         {
             "name": "Python: Current File",
             "type": "python",
@@ -56,7 +56,7 @@
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "${workspaceFolder}/app.py"
+                "FLASK_APP": "app.py"
             },
             "args": [
                 "run",
