--- a/console-client/src/NeuralStyle.ConsoleClient/NeuralStyle.ConsoleClient.csproj
+++ b/console-client/src/NeuralStyle.ConsoleClient/NeuralStyle.ConsoleClient.csproj
@@ -2,14 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <StartupObject>NeuralStyle.ConsoleClient.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ExifLib" Version="1.7.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.0" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.1" />
   </ItemGroup>
 
 </Project>
