--- a/src/NeuralStyle.ExplorerExtension/packages.config
+++ b/src/NeuralStyle.ExplorerExtension/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="ServerRegistrationManager" version="2.7.1" targetFramework="net472" />
   <package id="SharpShell" version="2.7.1" targetFramework="net472" />
+  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
 </packages>
