--- a/src/NeuralStyle.ExplorerExtension/NeuralStyle.ExplorerExtension.csproj
+++ b/src/NeuralStyle.ExplorerExtension/NeuralStyle.ExplorerExtension.csproj
@@ -57,7 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateJobFeature.cs" />
+    <Compile Include="Features\CreateEnlargeJob.cs" />
     <Compile Include="ExplorerMenuExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
