--- a/docker/super-resolution/Dockerfile
+++ b/docker/super-resolution/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sud
 RUN apt-get -y install libffi-dev libssl-dev libxml2-dev libxslt1-dev libjpeg8-dev zlib1g-dev python3-pip
 
 # Install miniconda
-RUN wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && bash ~/miniconda.sh -b -p ~/miniconda  && export PATH=~/miniconda/bin:$PATH && rm ~/miniconda.sh
+RUN wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p ~/miniconda  && export PATH=~/miniconda/bin:$PATH && rm ~/miniconda.sh
 
 # Install dependecies
 RUN conda install -y pytest keras tqdm Pillow
