--- a/docker/super-resolution/Dockerfile
+++ b/docker/super-resolution/Dockerfile
@@ -1,11 +1,17 @@
 FROM tensorflow/tensorflow:latest-gpu
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 
-# prepare basic os and python libs
-RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo zip
-RUN apt-get -y install libffi-dev libssl-dev libxml2-dev libxslt1-dev libjpeg8-dev zlib1g-dev python3-pip
+# remove python 2.7
+RUN apt purge python2.7-minimal -y && apt autoremove -y
+
+# update basic os
+RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo python3-pip
+
+# dependecies for python libs (ssl)
+RUN apt-get -y install libffi-dev libssl-dev libxml2-dev libxslt1-dev libjpeg8-dev zlib1g-dev 
 
 # Install miniconda
+# export PATH="~/miniconda/bin:$PATH"
 RUN wget --progress=bar:force https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p ~/miniconda && rm ~/miniconda.sh
 ENV PATH ~/miniconda/bin:$PATH
 
