updated python install to conda

--- a/docker/neural-style-tensorflow/Dockerfile
+++ b/docker/neural-style-tensorflow/Dockerfile
@@ -1,17 +1,22 @@
 FROM tensorflow/tensorflow:latest-gpu
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 
-# remove python 2.7
-RUN apt purge python2.7-minimal -y && apt autoremove -y
+# remove python 2.7 and 3.5 from native installations
+RUN apt purge python2.7-minimal -y && purge python3-minimal -y apt autoremove -y
 
 # update basic os
-RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo python3-pip
+RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo
 
 # dependecies for python libs (ssl)
 RUN apt-get -y install libffi-dev libssl-dev libxml2-dev libxslt1-dev libjpeg8-dev zlib1g-dev 
 
+# Install miniconda
+# export PATH="~/miniconda/bin:$PATH"
+RUN wget --progress=bar:force https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p ~/miniconda && rm ~/miniconda.sh
+ENV PATH ~/miniconda/bin:$PATH
+
 #install python libs
-RUN pip3 install tensorflow-gpu opencv-python-headless scipy azure-storage-queue azure-storage-blob applicationinsights piexif
+RUN pip install tensorflow-gpu opencv-python-headless scipy azure-storage-queue azure-storage-blob applicationinsights piexif
 
 # download loss network
 WORKDIR /app/
@@ -20,4 +25,4 @@ RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/mod
 # Copy the neural style files (modified) -> this is why we are not cloning the orignal github files
 COPY ["/src/*.py" ,"/app/"]
 
-ENTRYPOINT ["python3", "/app/queueclient.py"]
+ENTRYPOINT ["python", "/app/queueclient.py"]
