--- a/docker/super-resolution/Dockerfile
+++ b/docker/super-resolution/Dockerfile
@@ -1,11 +1,11 @@
 FROM tensorflow/tensorflow:latest-gpu
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 
-# remove python 2.7
-RUN apt purge python2.7-minimal -y && apt autoremove -y
+# remove python 2.7 and 3.5 from native installations
+RUN apt purge python2.7-minimal -y && purge python3-minimal -y apt autoremove -y
 
 # update basic os
-RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo python3-pip
+RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo
 
 # dependecies for python libs (ssl)
 RUN apt-get -y install libffi-dev libssl-dev libxml2-dev libxslt1-dev libjpeg8-dev zlib1g-dev 
@@ -15,9 +15,9 @@ RUN apt-get -y install libffi-dev libssl-dev libxml2-dev libxslt1-dev libjpeg8-d
 RUN wget --progress=bar:force https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p ~/miniconda && rm ~/miniconda.sh
 ENV PATH ~/miniconda/bin:$PATH
 
-# Install dependecies
+#install python libs
 RUN conda install -y pytest keras tqdm Pillow
-RUN pip3 install tensorflow-gpu
+RUN pip install tensorflow-gpu
 
 # clone super-resolution 
 WORKDIR /app/
