--- a/docker/neural-style-tensorflow/env/environment.yaml
+++ b/docker/neural-style-tensorflow/env/environment.yaml
@@ -1,13 +1,11 @@
 name: neural-style-tensorflow
-channels:
-  - defaults
 dependencies:
   - python=3.7
   - scipy
   - pip
   - pip:
+    - tensorflow-gpu
     - opencv-python-headless
-    - tensorflow
     - piexif
     - azure-storage-queue
     - azure-storage-blob
