--- a/docker/neural-style-tensorflow/Dockerfile
+++ b/docker/neural-style-tensorflow/Dockerfile
@@ -27,4 +27,4 @@ RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/mod
 # Copy the neural style files (modified) -> this is why we are not cloning the orignal github files
 COPY ["/src/*.py" ,"/app/"]
 
-ENTRYPOINT ["python", "/app/queueclient.py"]
+ENTRYPOINT ["/root/miniconda/bin/python", "/app/queueclient.py"]
