--- a/docker/neural-style-tensorflow/Dockerfile-1.12.0-gpu-py3
+++ b/docker/neural-style-tensorflow/Dockerfile-1.12.0-gpu-py3
@@ -1,17 +1,31 @@
 FROM tensorflow/tensorflow:1.12.0-gpu-py3
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
-LABEL version="1.0"
+LABEL version="1.1"
 
-# prepare basic os and python libs
-# RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo
-RUN apt-get update && apt-get install -y nano wget git sudo
-RUN pip install --upgrade pip && pip install opencv-python-headless scipy azure-storage-queue azure-storage-blob piexif
+# remove python 2.7 and 3.5 from native installations
+RUN apt purge python2.7-minimal -y && apt purge python3-minimal -y && apt autoremove -y
+
+# update basic os
+RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo
+
+# dependecies for python libs (ssl)
+RUN apt-get -y install libffi-dev libssl-dev libxml2-dev libxslt1-dev libjpeg8-dev zlib1g-dev 
+
+# Install miniconda
+# export PATH="~/miniconda/bin:$PATH"
+RUN wget --progress=bar:force https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p ~/miniconda && rm ~/miniconda.sh
+ENV PATH ~/miniconda/bin:$PATH
+
+#install python libs
+WORKDIR /env/
+COPY ["/env/environment.yaml" ,"/env/"]
+RUN conda env update --file environment.yaml
 
 # download loss network
 WORKDIR /app/
-RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/imagenet-vgg-verydeep-19.mat
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/pretrained-models/imagenet-vgg-verydeep-19.mat
 
 # Copy the neural style files (modified) -> this is why we are not cloning the orignal github files
 COPY ["/src/*.py" ,"/app/"]
 
-ENTRYPOINT ["python", "/app/queueclient.py"]
+ENTRYPOINT ["/root/miniconda/bin/python", "/app/queueclient.py"]
