added apt-get update to ensure package info is refreshed before purging packages

--- a/docker/super-resolution/Dockerfile
+++ b/docker/super-resolution/Dockerfile
@@ -2,7 +2,7 @@ FROM tensorflow/tensorflow:latest-gpu
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 
 # remove python 2.7 and 3.5 from native installations
-RUN apt purge python2.7-minimal -y && apt purge python3-minimal -y && apt autoremove -y
+RUN apt-get update && apt purge python2.7-minimal -y && apt purge python3-minimal -y && apt autoremove -y
 
 # update basic os
 RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo
