--- a/docker/super-resolution/Dockerfile
+++ b/docker/super-resolution/Dockerfile
@@ -1,5 +1,6 @@
 FROM tensorflow/tensorflow:latest-gpu
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
+LABEL version="1.1"
 
 # remove python 2.7 and 3.5 from native installations
 RUN apt-get update && apt purge python2.7-minimal -y && apt purge python3-minimal -y && apt autoremove -y
