--- a/docker/neural-style-tensorflow/src/.vscode/settings.json
+++ b/docker/neural-style-tensorflow/src/.vscode/settings.json
@@ -2,5 +2,5 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": false,
-    "python.pythonPath": "C:\\Users\\gensb\\AppData\\Local\\Continuum\\miniconda3\\envs\\neural-style-tensorflow\\python.exe"
+    "python.pythonPath": "C:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Python37_64\\python.exe"
 }
