--- a/docker/neural-style-tensorflow/env/environment.yaml
+++ b/docker/neural-style-tensorflow/env/environment.yaml
@@ -4,7 +4,7 @@ dependencies:
   - scipy
   - pip
   - pip:
-    - tensorflow-gpu
+    - tensorflow-gpu==1.15.0
     - opencv-python-headless
     - piexif
     - azure-storage-queue
