changed env path

--- a/docker/neural-style-transfer/Dockerfile
+++ b/docker/neural-style-transfer/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get install -y libsm6 libxext6 libxrender-dev
 # Install miniconda
 #RUN wget --progress=bar:force https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p /root/miniconda && rm ~/miniconda.sh
 RUN wget --progress=bar:force https://repo.anaconda.com/archive/Anaconda3-2020.11-Linux-x86_64.sh -O ~/anaconda.sh && sh ~/anaconda.sh -b -p /root/anaconda && rm ~/anaconda.sh
-ENV PATH /root/miniconda/bin:$PATH
+ENV PATH /root/anaconda/bin:$PATH
 
 #install python libs
 WORKDIR /env/
