--- a/docker/neural-style-tensorflow/Makefile
+++ b/docker/neural-style-tensorflow/Makefile
@@ -7,13 +7,13 @@ build:
 	
 build-1.15.0:
 	nvidia-docker build -f Dockerfile-1.15.0-gpu-py3 -t $(IMGNAME):1.15.0-gpu-py3 .
-	nvidia-docker push sbetzin/neural-style-tensorflow:1.15.0-gpu-py3
+	#nvidia-docker push sbetzin/neural-style-tensorflow:1.15.0-gpu-py3
 
 clean:
 	docker rmi $(IMGNAME):$(IMGTAG)
 
 start:
-	nvidia-docker run -d -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow --restart=unless-stopped $(IMGNAME)
+	nvidia-docker run -d -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow --restart=unless-stopped $(IMGNAME):1.15.0-gpu-py3
 	
 stop:
 	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-tensorflow")
@@ -26,7 +26,7 @@ logs:
 	nvidia-docker logs $(shell docker ps -q --filter "name=neural-style-tensorflow")
 	
 console-start:
-	nvidia-docker run --rm -it -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow-console --entrypoint /bin/bash $(IMGNAME)
+	nvidia-docker run --rm -it -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow-console --entrypoint /bin/bash $(IMGNAME):1.15.0-gpu-py3
 
 console-stop:
 	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-tensorflow-console")
