--- a/docker/neural-style-tensorflow/Makefile
+++ b/docker/neural-style-tensorflow/Makefile
@@ -1,19 +1,16 @@
-.PHONY: all build build-1.15.0 clean start stop restart logs pull console-start console-stop console-logs
+.PHONY: all build clean start stop restart logs pull console-start console-stop console-logs
 IMGNAME=sbetzin/neural-style-tensorflow
-IMGTAG=latest
-
-build:
-	nvidia-docker build -t $(IMGNAME):$(IMGTAG) .
+IMGTAG=1.15.0-gpu-py3
 	
-build-1.15.0:
-	nvidia-docker build -f Dockerfile-1.15.0-gpu-py3 -t $(IMGNAME):1.15.0-gpu-py3 .
+build:
+	nvidia-docker build -f Dockerfile-1.15.0-gpu-py3 -t $(IMGNAME):$(IMGTAG) .
 	#nvidia-docker push sbetzin/neural-style-tensorflow:1.15.0-gpu-py3
 
 clean:
 	docker rmi $(IMGNAME):$(IMGTAG)
 
 start:
-	nvidia-docker run -d -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow --restart=unless-stopped $(IMGNAME):1.15.0-gpu-py3
+	nvidia-docker run -d -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow --restart=unless-stopped $(IMGNAME):$(IMGTAG)
 	
 stop:
 	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-tensorflow")
@@ -26,7 +23,7 @@ logs:
 	nvidia-docker logs $(shell docker ps -q --filter "name=neural-style-tensorflow")
 	
 console-start:
-	nvidia-docker run --rm -it -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow-console --entrypoint /bin/bash $(IMGNAME):1.15.0-gpu-py3
+	nvidia-docker run --rm -it -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow-console --entrypoint /bin/bash $(IMGNAME):$(IMGTAG)
 
 console-stop:
 	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-tensorflow-console")
