--- a/src/NeuralStyle.Tests/packages.config
+++ b/src/NeuralStyle.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JetBrains.dotMemoryUnit" version="3.1.20200127.214830" targetFramework="net472" />
+  <package id="JetBrains.dotMemoryUnit" version="3.2.20220510" targetFramework="net472" />
   <package id="xunit" version="2.4.1" targetFramework="net472" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net472" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net472" />
