implemented web page creation and upload

--- a/src/NeuralStyle.ExplorerExtension/NeuralStyle.ExplorerExtension.csproj
+++ b/src/NeuralStyle.ExplorerExtension/NeuralStyle.ExplorerExtension.csproj
@@ -73,7 +73,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Features\CreateEnlargeJob.cs" />
     <Compile Include="ExplorerMenuExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -87,6 +86,9 @@
       <Project>{7d90a89c-73f6-4949-a232-b1012cc8d19e}</Project>
       <Name>NeuralStyle.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Features\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
