--- a/src/MigrationBackup/4866eb81/NeuralStyle.Core/packages.config
+++ b/src/MigrationBackup/4866eb81/NeuralStyle.Core/packages.config
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.17.1" targetFramework="net472" />
+  <package id="Azure.Core" version="1.24.0" targetFramework="net472" />
+  <package id="Azure.Security.KeyVault.Secrets" version="4.3.0" targetFramework="net472" />
   <package id="ExifLib" version="1.7.0.0" targetFramework="net472" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.5" targetFramework="net472" />
+  <package id="InstagramApiSharp" version="1.7.2" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.19" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="SmartFormat" version="3.1.0" targetFramework="net472" />
   <package id="SmartFormat.Extensions.Newtonsoft.Json" version="3.1.0" targetFramework="net472" />
   <package id="SmartFormat.Extensions.System.Text.Json" version="3.1.0" targetFramework="net472" />
@@ -14,13 +18,22 @@
   <package id="SmartFormat.Extensions.Xml" version="3.1.0" targetFramework="net472" />
   <package id="SmartFormat.NET" version="3.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Memory.Data" version="6.0.0" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="6.0.2" targetFramework="net472" />
+  <package id="System.Text.Json" version="6.0.5" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
 </packages>
